tests/rename/should_compile/T23318.hs
module T23318 (T(), T(..)) where
data T = A | B
