tests/rename/should_fail/T22581b_helper.hs
module T22581b_helper (T(MkT1, MkT2)) where

data T = MkT1 | MkT2
